--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,4 +1,4 @@
 = simple_form_for @article do |f|
-  %p= f.input :title
-  %p= f.input :content
-  %p= f.submit
+  = f.input :title
+  = f.input :content
+  = f.submit
