--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for @article do |f|
+  = f.collection_select :category_id, Category.all.order("name ASC"), :id, :name, { prompty: "Choose a Category" }
   = f.input :title
   = f.input :content
   = f.submit
